test/error/syn/whileDoLess.tig
let
	var a := 0
in
	while (1) (
		a := 2
	)
end
